OPHYK-1047 Run mock substance service on CI too